fix(UI): Fix scrolling window when dialog elements are open on iOS devices

--- a/app/src/ui/components/AppHeader/AppHeader.css
+++ b/app/src/ui/components/AppHeader/AppHeader.css
@@ -3,12 +3,15 @@
 }
 
 .appheader {
-    @apply flex tablet:items-baseline gap-2 px-1 tablet:px-4 py-2;
+    @apply flex items-baseline gap-2 px-1 tablet:px-4 py-2;
 
     padding-top: max(env(safe-area-inset-top, 0), calc(var(--spacing) * 2));
 
     -webkit-app-region: drag;
-    min-height: max(env(titlebar-area-height), var(--appheader-height));
+    min-height: max(
+        env(titlebar-area-height, var(--appheader-height)),
+        var(--appheader-height)
+    );
     width: env(titlebar-area-width, 100%);
 }
 
@@ -28,5 +31,20 @@ body.platform-macos .appheader {
 
     & > .btn:first-child {
         @apply mt-6;
+    }
+}
+
+@media (max-width: 767px) {
+    :root:has(.main-screen.has-subscreen) {
+        .appheader {
+            height: max(
+                env(titlebar-area-height, var(--appheader-height)),
+                var(--appheader-height)
+            ) !important;
+        }
+
+        .appheader > * {
+            display: none;
+        }
     }
 }
